# verdict-weight

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  VALIDATION.md  __init__.py  pyproject.toml  setup.py
benchmarks/: cve_validation.py  ieee_head_to_head.py  learned_head_to_head.py  vertical_validation.py
benchmarks/results/: cve_validation.json  cve_validation.md  ieee_head_to_head.json  ieee_head_to_head.md  learned_baseline_v2.json  learned_head_to_head.json  learned_head_to_head.md  r2_cross_dataset_results.json
benchmarks/results/vertical/: vertical_all_gov_n10000_seed42.json  vertical_cybersecurity_gov_n10000_seed42.json  vertical_defense_gov_n10000_seed42.json  vertical_financial_gov_n10000_seed42.json  vertical_healthcare_gov_n10000_seed42.json  vertical_legal_gov_n10000_seed42.json  vertical_manufacturing_gov_n10000_seed42.json  vertical_rag_gov_n10000_seed42.json
examples/: cybersecurity.py  healthcare.py
medguard-ai/: package-lock.json  package.json
medguard-ai/src/app/: layout.tsx
medguard-ai/src/lib/supabase/: server.ts
tests/: conftest.py
tests/integration/: test_unified_composition.py
tests/performance/: test_throughput.py
tests/property/: test_invariants.py
tests/regression/: test_attack_classes.py
tests/unit/: test_cps.py  test_ctc.py  test_learned_baselines.py  test_metrics.py  test_ris.py  test_sis.py  test_streams_commercial.py
validation/: __init__.py  baselines.py  datasets.py  learned_baselines.py  metrics.py  synthetic_validation.py
validation/results/: synthetic_report.json  synthetic_report.md
verdict_weight/: __init__.py  core.py  unified.py
verdict_weight/streams/: __init__.py  cps.py  ctc.py  ris.py  sis.py
