[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verdict-weight"
version = "1.1.0"
description = "VERDICT WEIGHT™ — Context-Adaptive Multi-Source Confidence Synthesis. Patent Pending #64/032,606. 673 tests, 1,270,000+ scenarios validated. 57.8% adversarial suppression. 12 domain profiles."
readme = "README.md"
license = {text = "Proprietary — See LICENSE"}
authors = [
    {name = "Andre Byrd", email = "andre.byrd@odingard.com"}
]
keywords = [
    "confidence calibration",
    "threat intelligence",
    "multi-source fusion",
    "adversarial AI",
    "AI governance",
    "cybersecurity",
    "machine learning",
    "verdict weight",
    "autonomous systems",
    "signal strength",
    "doubt index",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/Odingard/verdict-weight"
Paper = "https://papers.ssrn.com/sol3/papers.cfm?abstract_id=6532658"
DOI = "https://doi.org/10.5281/zenodo.19447547"
"Bug Tracker" = "https://github.com/Odingard/verdict-weight/issues"
Licensing = "https://github.com/Odingard/verdict-weight/blob/main/LICENSE"

[tool.setuptools.packages.find]
where = ["."]
include = ["verdict_weight*"]
